# Cellarim-ASR-POC

./: .gitignore  ARCHITECTURE.md  README.md  app.py  environment.yml  packages.txt  pyproject.toml  requirements.txt
config/: target.yaml
data/curated_sequences/: anchors.fasta  benchmark_extant.fasta  metadata.csv
notebooks/: 01_wp1_dataset_build.ipynb  02_wp2_align_phylo_asr.ipynb  03_wp3_embed_and_similarity.ipynb  04_wp4_fold_topK.ipynb  05_wp5_rank_and_report.ipynb  06_explore_embedding_space.ipynb
src/asr_poc/: __init__.py  config.py  deterministic_validation.py  embeddings.py  feature_table.py  io_utils.py  llm_scoring.py  motif_conservation.py  phylo.py  ranking.py  report.py  retrieval.py  similarity.py  structure.py  structure_scoring.py
tests/: conftest.py  test_pipeline_smoke.py
