[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "asr-poc"
version = "0.1.0"
description = "AI-assisted Ancestral Sequence Reconstruction (ASR) of enzymes — POC pipeline"
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "live: hits real external APIs/tools (deselected by default in CI)",
]
